#27-test: 바뀐 요구 사항으로 최신 사항 반영.